# comfyui-aspect-ratio-presets

./: .gitignore  LICENSE  README.md  __init__.py  aspect_ratio_nodes.py  nodes.py  presets.py  pyproject.toml
.github/workflows/: publish_action.yml
